Update: Fix Three.js module import and implement pixel distortion effect

--- a/index3.html
+++ b/index3.html
@@ -44,6 +44,6 @@
 			</div>
 		</main>
 		<script src="https://tympanus.net/codrops/adpacks/cda.js"></script>
-		<script type="module" src="js/app.js"></script>
+		<script type="module" src="./js/three-app.js"></script>
 	</body>
 </html>
